[project]
name = "twitter"
version = "0.1.0"
description = "A Python package to perform twitter posts analysis."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4==4.12.3",
    "certifi==2024.8.30",
    "charset-normalizer==3.3.2",
    "click==8.1.7",
    "colorama==0.4.6",
    "contourpy==1.3.0",
    "cycler==0.12.1",
    "fonttools==4.54.1",
    "idna==3.10",
    "joblib==1.4.2",
    "kiwisolver==1.4.7",
    "matplotlib==3.9.2",
    "nltk==3.9.1",
    "numpy==2.1.2",
    "packaging==24.1",
    "pandas==2.2.3",
    "pandoc>=2.4",
    "pillow==11.0.0",
    "polars==1.12.0",
    "pyparsing==3.2.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "pytz==2024.2",
    "ratelimit==2.2.1",
    "regex==2024.9.11",
    "requests==2.32.3",
    "seaborn==0.13.2",
    "six==1.16.0",
    "soupsieve==2.6",
    "textblob==0.18.0.post0",
    "tqdm==4.66.6",
    "tzdata==2024.2",
    "urllib3==2.2.3",
    "wordcloud==1.9.3",
]
